# contrato_biblia

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  reflexoes.rs  teste.rs  types.rs
