 [package]
name = "contrato_biblia"
version = "0.2.0"
edition = "2021"
publish = true
authors = ["Josias Batista <francisco.batista67@alu.ufc.br>"]
description = "Uma biblioteca Rust para um smart contract na blockchain Stellar (Soroban) focado em uma aplicação da Bíblia Sagrada."
license = "MIT"
repository = "https://github.com/josiasdev/contrato_biblia"
keywords = ["stellar" , "soroban", "blockchain", "smart-contract", "bible"]
categories = ["api-bindings"]


[dependencies]
soroban-sdk = "23.0.3"


 [lib]
 crate-type = ["cdylib"]

 [profile.release]
 opt-level = "z"
 overflow-checks = true
 debug = 0
 strip = "symbols"
 debug-assertions = false
 panic = "abort"
 codegen-units = 1
 lto = true

[dev-dependencies]
soroban-sdk = { version = "23.0.3", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
